--- a/index.html
+++ b/index.html
@@ -20,13 +20,6 @@
       box-sizing: border-box;
     }
 
-    .leDiv {
-      position: fixed;
-      height: 100vh;
-      width: 100%;
-      top: 0;
-    }
-
 
     @media all and (max-width: 767px) {
 
@@ -95,7 +88,8 @@
   <div class="row justify-content-center">
     <div class="col-lg-6 p-0">
 
-      <nav class="navbar navbar-expand flex-column py-2 px-3 border border-2 border-bottom-1 border-start-0 border-top-0 border-end-0 border-white">
+      <nav
+        class="navbar navbar-expand flex-column py-2 px-3 border border-2 border-bottom-1 border-start-0 border-top-0 border-end-0 border-white">
         <ul class="navbar-nav w-100 d-flex justify-content-between align-items-center">
           <li class="nav-item">
             <i class="bi bi-0-circle cursor-pointer fw-bold fontMed"></i>
@@ -115,7 +109,8 @@
       <div class="modal fade" id="searchdiv">
         <div class="modal-dialog m-0 mx-auto">
           <div class="modal-content bg-black text-white">
-            <div class="modal-header p-3 d-flex align-items-center border border-2 border-bottom-1 border-start-0 border-top-0 border-end-0 border-white">
+            <div
+              class="modal-header p-3 d-flex align-items-center border border-2 border-bottom-1 border-start-0 border-top-0 border-end-0 border-white">
               <i data-bs-dismiss="modal" class="bi bi-arrow-left cursor-pointer fw-bold fontMed"></i>
               <form class="d-flex gap-2">
                 <input type="text" placeholder="Enter league" class="form-control fontSmall">
@@ -151,66 +146,47 @@
 
 
 
-
-
-
-
-      <section id="premierDiv" class="container-fluid my-2">
-        <header class="bg-white px-2 rounded-2 text-black">
-          <p style="font-weight: bold;" class="my-3 d-flex align-items-center gap-1">
-            <img loading="lazy" class="rounded-2" src="https://static.livescore.com/i2/fh/england.jpg" alt=""
-              style="background-image:url(data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=); width: 2rem;" />
-            <span style="font-weight: bold;" class="fontMed">Premier League</span>
-          </p>
-        </header>
-
-      </section>
-
-      <div id="premTitleDiv" style="display: none;" class="leDiv bg-black text-white">
-        <div class="nextDiv">
-          <div class="container-fluid w-75 d-flex text-white my-2">
-            <i id="cloPremier" style="font-weight: bolder; cursor: pointer;" class="bi bi-arrow-left mx-3 fontMed"></i>
-            <ul class="container-fluid d-flex justify-content-between border border-2 px-2 py-2 border-white nav nav-tabs 
-              nav-justify">
-              <li class="nav-item">
-                <a style="font-weight: bold;" class="text-white text-decoration-none text-center m-0 reBody fontSmall"
-                  href="#table" data-bs-toggle="tab">
-                  Table
-                </a>
-              </li>
-              <li class="nav-item">
-                <a style="font-weight: bold;" class="text-white text-decoration-none text-center m-0 fontSmall"
-                  href="#matches" data-bs-toggle="tab">
-                  Matches
-                </a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="tab-content bg-black text-white">
-            <div class="tab-pane fade p-2" id="table">
-              <table id="premierTable" class="table text-white table-bordered fontMicro">
-                <tr>
-                  <th style="background-color: black; color: white;" class="m-0" scope="col">n/m</th>
-                  <th style="background-color: black; color: white;" class="m-0" scope="col">Teams</th>
-                  <th style="background-color: black; color: white;" class="m-0" scope="col">Ptd</th>
-                  <th style="background-color: black; color: white;" class="m-0" scope="col">W</th>
-                  <th style="background-color: black; color: white;" class="m-0" scope="col">L</th>
-                  <th style="background-color: black; color: white;" class="m-0" scope="col">D</th>
-                  <th style="background-color: black; color: white;" class="m-0" scope="col">GF</th>
-                  <th style="background-color: black; color: white;" class="m-0" scope="col">GA</th>
-                  <th style="background-color: black; color: white;" class="m-0" scope="col">+/-</th>
-                  <th style="background-color: black; color: white;" class="m-0" scope="col">pts</th>
-                </tr>
-              </table>
+      <div>
+        <section id="premierDiv" class="container-fluid px-3 my-3">
+          <header class="bg-white mb-2 py-1 px-2 rounded-2 d-flex align-items-center gap-1">
+            <img src="./league_logos/england.jpg" style="width: 2rem;" alt="england">
+            <p class="fw-bold text-black m-0 fontMed">Premier League</p>
+          </header>
+        </section>
+        <div id="premTitleDiv" style="display: none;" class="position-fixed fixed-top w-100 h-100 bg-black p-3">
+          <div class="col-lg-6 mx-auto">
+            <div class="w-75 mx-auto d-flex align-items-center gap-5">
+              <i id="cloPremier" class="bi bi-arrow-left fw-bold cursor-pointer fontMed"></i>
+              <ul class="w-100 d-flex justify-content-around border border-2 border-white py-2 nav nav-tabs">
+                <li class="nav-item"><a class="fw-bold text-white text-decoration-none reBody fontSmall" href="#table" aria-selected="true" data-bs-toggle="tab">Table</a></li>
+                <li class="nav-item"><a class="fw-bold text-white text-decoration-none fontSmall" href="#matches" aria-selected="false" data-bs-toggle="tab">Matches</a></li>
+              </ul>
             </div>
-            <div class="tabe-pane fade px-2" id="matches">
-              <section id="match_one">
-                <p style="font-weight: bold;" class="m-0 fontSmall">Matchday 34</p>
-              </section>
-              <section id="match_two">
-                <p style="font-weight: bold;" class="m-0 fontSmall">Matchday 35</p>
-              </section>
+            <div class="tab-content bg-black text-white mt-5">
+              <div class="tab-pane fade p-2" id="table">
+                <table id="premierTable" class="table text-white table-bordered fontMicro">
+                  <tr>
+                    <th style="background-color: black; color: white;" class="m-0" scope="col">n/m</th>
+                    <th style="background-color: black; color: white;" class="m-0" scope="col">Teams</th>
+                    <th style="background-color: black; color: white;" class="m-0" scope="col">Ptd</th>
+                    <th style="background-color: black; color: white;" class="m-0" scope="col">W</th>
+                    <th style="background-color: black; color: white;" class="m-0" scope="col">L</th>
+                    <th style="background-color: black; color: white;" class="m-0" scope="col">D</th>
+                    <th style="background-color: black; color: white;" class="m-0" scope="col">GF</th>
+                    <th style="background-color: black; color: white;" class="m-0" scope="col">GA</th>
+                    <th style="background-color: black; color: white;" class="m-0" scope="col">+/-</th>
+                    <th style="background-color: black; color: white;" class="m-0" scope="col">pts</th>
+                  </tr>
+                </table>
+              </div>
+              <div class="tabe-pane fade px-2" id="matches">
+                <section id="match_one">
+                  <p style="font-weight: bold;" class="m-0 fontSmall">Matchday 34</p>
+                </section>
+                <section id="match_two">
+                  <p style="font-weight: bold;" class="m-0 fontSmall">Matchday 35</p>
+                </section>
+              </div>
             </div>
           </div>
         </div>
@@ -220,18 +196,10 @@
 
 
 
-
-
-
-
-
-      <section id="laligaDiv" class="container-fluid my-2">
-        <header class="bg-white px-2 rounded-2 text-black">
-          <p style="font-weight: bold;" class="my-3 d-flex align-items-center gap-1">
-            <img loading="lazy" class="rounded-2" src="https://static.livescore.com/i2/fh/spain.jpg" alt=""
-              style="background-image:url(data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=); width: 2rem;" />
-            <span style="font-weight: bold;" class="fontMed">Laliga Santander</span>
-          </p>
+      <section id="laligaDiv" class="container-fluid px-3 my-3">
+        <header class="bg-white mb-2 py-1 px-2 rounded-2 d-flex align-items-center gap-1">
+          <img src="./league_logos/spain.jpg" style="width: 2rem;" alt="spain">
+          <p class="fw-bold text-black m-0 fontMed">Laliga Santander</p>
         </header>
       </section>
 
@@ -292,20 +260,11 @@
 
 
 
-
-
-
-
-
-      <section id="serieDiv" class="container-fluid my-2">
-        <header class="bg-white px-2 rounded-2 text-black">
-          <p style="font-weight: bold;" class="my-3 d-flex align-items-center gap-1">
-            <img loading="lazy" class="rounded-2" src="https://static.livescore.com/i2/fh/italy.jpg" alt=""
-              style="background-image:url(data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=); width: 2rem;" />
-            <span style="font-weight: bold;" class="fontMed">Serie A</span>
-          </p>
+      <section id="serieDiv" class="container-fluid px-3 my-3">
+        <header class="bg-white mb-2 py-1 px-2 rounded-2 d-flex align-items-center gap-1">
+          <img src="./league_logos/italy.jpg" width="2rem" alt="italy">
+          <p class="fw-bold text-black m-0 fontMed">Serie A</p>
         </header>
-
       </section>
 
       <div id="serieTitleDiv" style="display: none;" class="leDiv bg-black text-white">
@@ -365,20 +324,11 @@
 
 
 
-
-
-
-
-
-      <section id="bundDiv" class="container-fluid my-2">
-        <header class="bg-white px-2 rounded-2 text-black">
-          <p style="font-weight: bold;" class="my-3 d-flex align-items-center gap-1">
-            <img loading="lazy" class="rounded-2" src="https://static.livescore.com/i2/fh/germany.jpg" alt=""
-              style="background-image:url(data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=); width: 2rem;" />
-            <span style="font-weight: bold;" class="fontMed">Bundesliga</span>
-          </p>
+      <section id="bundDiv" class="container-fluid px-3 my-3">
+        <header class="bg-white mb-2 py-1 px-2 rounded-2 d-flex align-items-center gap-1">
+          <img src="./league_logos/germany.jpg" style="width: 2rem;" alt="germany">
+          <p class="fw-bold text-black m-0 fontMed">Bundesliga</p>
         </header>
-
       </section>
 
       <div id="bundTitleDiv" style="display: none;" class="leDiv bg-black text-white">
@@ -438,20 +388,11 @@
 
 
 
-
-
-
-
-
-      <section id="ligueDiv" class="container-fluid my-2 mb-5">
-        <header class="bg-white px-2 rounded-2 text-black">
-          <p style="font-weight: bold;" class="my-3 d-flex align-items-center gap-1">
-            <img loading="lazy" class="rounded-2" src="https://static.livescore.com/i2/fh/france.jpg" alt=""
-              style="background-image:url(data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=); width: 2rem;" />
-            <span style="font-weight: bold;" class="fontMed">Ligue 1</span>
-          </p>
+      <section id="ligueDiv" class="container-fluid px-3 mt-3 mb-5">
+        <header class="bg-white mb-2 py-1 px-2 rounded-2 d-flex align-items-center gap-1">
+          <img src="./league_logos/france.jpg" style="width: 2rem;" alt="france">
+          <p class="fw-bold text-black m-0 fontMed">Ligue 1</p>
         </header>
-
       </section>
 
       <div id="ligueTitleDiv" style="display: none;" class="leDiv bg-black text-white">
@@ -507,13 +448,14 @@
         </div>
       </div>
 
-      <div class="col-lg-6 mx-auto fixed-bottom">
+      <div class="col-lg-6 mx-auto fixed-bottom z-0">
         <button data-bs-toggle="popover" type="button" title="Clarification" data-bs-trigger="focus"
           data-bs-placement="top" data-bs-content="This is a football app which shows highlight of played match"
           class="btn btn-block text-bg-dark w-100 rounded-0 fw-bold fontMed">
           information
         </button>
       </div>
+
     </div>
   </div>
   <script src="index.js"></script>
