--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <title>Livesegball</title>
-    <style>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <title>Livesegball</title>
+  <style>
     * {
       padding: 0;
       margin: 0;
@@ -84,12 +88,12 @@
         font-size: 0.75rem;
       }
     }
-    </style>
-  </head>
+  </style>
+</head>
 
-  <body class="bg-black text-white">
-    <div class="col-lg-6 mx-auto pb-5" id="mainPage">
-      <nav class="navbar navbar-expand flex-column py-2 px-3 border border-2 border-bottom-1 border-start-0 border-top-0 border-end-0 border-white">
+<body class="bg-black text-white">
+  <div class="col-lg-6 mx-auto pb-5" id="mainPage">
+    <nav class="navbar navbar-expand flex-column py-2 px-3 border border-2 border-bottom-1 border-start-0 border-top-0 border-end-0 border-white">
       <ul class="navbar-nav w-100 d-flex justify-content-between align-items-center">
         <li class="nav-item">
           <i class="bi bi-0-circle cursor-pointer fw-bold fontMed"></i>
@@ -103,11 +107,13 @@
       </ul>
       <i class="bi bi-calendar2-week-fill cursor-pointer fw-bold my-2 fontMed"></i>
       <p class="h6 border border-white border-2 p-1 fontMed">Liveseg football stream app.</p>
-      </nav>
-      <div class="modal fade" id="searchdiv">
+    </nav>
+
+    <div class="modal fade" id="searchdiv">
       <div class="modal-dialog m-0 mx-auto">
         <div class="modal-content bg-black text-white">
-          <div class="modal-header p-3 d-flex align-items-center border border-2 border-bottom-1 border-start-0 border-top-0 border-end-0 border-white">
+          <div
+            class="modal-header p-3 d-flex align-items-center border border-2 border-bottom-1 border-start-0 border-top-0 border-end-0 border-white">
             <i data-bs-dismiss="modal" class="bi bi-arrow-left cursor-pointer fw-bold fontMed"></i>
             <form class="d-flex gap-2">
               <input type="text" placeholder="Enter league" class="form-control fontSmall">
@@ -115,15 +121,18 @@
             </form>
           </div>
           <div class="modal-body d-grid gap-3 p-3">
-            <div data-bs-dismiss="modal" id="premierTitle" class="d-flex align-items-center gap-2 cursor-pointer show-div">
+            <div data-bs-dismiss="modal" id="premierTitle"
+              class="d-flex align-items-center gap-2 cursor-pointer show-div">
               <img src="./league_logos/england.jpg" class="rounded-2" style="width: 2rem;" alt="england">
               <p class="fontSmall m-0">Premier League</p>
             </div>
-            <div data-bs-dismiss="modal" id="laligaTitle" class="d-flex align-items-center gap-2 cursor-pointer show-div">
+            <div data-bs-dismiss="modal" id="laligaTitle"
+              class="d-flex align-items-center gap-2 cursor-pointer show-div">
               <img src="./league_logos/spain.jpg" class="rounded-2" style="width: 2rem;" alt="spain">
               <p class="fontSmall m-0">Laliga</p>
             </div>
-            <div data-bs-dismiss="modal" id="serieTitle" class="d-flex align-items-center gap-2 cursor-pointer show-div">
+            <div data-bs-dismiss="modal" id="serieTitle"
+              class="d-flex align-items-center gap-2 cursor-pointer show-div">
               <img src="./league_logos/italy.jpg" class="rounded-2" style="width: 2rem;" alt="italy">
               <p class="fontSmall m-0">Serie A</p>
             </div>
@@ -131,7 +140,8 @@
               <img src="./league_logos/germany.jpg" class="rounded-2" style="width: 2rem;" alt="germany">
               <p class="fontSmall m-0">Bundesliga</p>
             </div>
-            <div data-bs-dismiss="modal" id="ligueTitle" class="d-flex align-items-center gap-2 cursor-pointer show-div">
+            <div data-bs-dismiss="modal" id="ligueTitle"
+              class="d-flex align-items-center gap-2 cursor-pointer show-div">
               <img src="./league_logos/france.jpg" class="rounded-2" style="width: 2rem;" alt="france">
               <p class="fontSmall m-0">Ligue 1</p>
             </div>
@@ -139,13 +149,16 @@
           </div>
         </div>
       </div>
-      </div>
-      <div class="fixed-bottom mx-auto col-lg-6 z-0">
-        <button data-bs-toggle="popover" type="button" title="Clarification" data-bs-trigger="focus" data-bs-placement="top" data-bs-content="This is a football app which shows highlight of played match" class="btn btn-block text-bg-dark w-100 rounded-0 fw-bold fontMed">
-          information
-        </button>
-      </div>
     </div>
-    <script src="index.js"></script>
-  </body>
+  </div>
+
+  <main id="leagueDivMain"></main>
+  
+  <div class="fixed-bottom mx-auto col-lg-6 z-0">
+    <button class="btn btn-block text-bg-dark w-100 rounded-0 fw-bold fontMed" data-bs-toggle="popover" type="button" title="Clarification" data-bs-trigger="focus" data-bs-placement="top" data-bs-content="This is a football app which shows highlight of played match">
+      information
+    </button>
+  </div>
+  <script src="index.js"></script>
+</body>
 </html>
