--- a/league_folders/premierPage/Chelsea_VS_Tottenham Hotspur/Chelsea_VS_Tottenham Hotspur.html
+++ b/league_folders/premierPage/Chelsea_VS_Tottenham Hotspur/Chelsea_VS_Tottenham Hotspur.html
@@ -18,7 +18,7 @@
     <div class="col-lg-6 mx-auto">
         <nav class="navbar navbar-expand p-3 border border-white border-2 border-bottom-1 border-start-0 border-top-0 border-end-0">
             <ul class="navbar-nav w-100 d-flex justify-content-between align-items-center">
-                <li class="nav-item"><a href="../../index.html" class="text-white"><i class="fw-bold bi bi-arrow-left"></i></a></li>
+                <li class="nav-item"><a href="../../../index.html" class="text-white"><i class="fw-bold bi bi-arrow-left"></i></a></li>
                 <li class="nav-item d-flex align-items-center gap-2">
                     <img src="../../../league_logos/england.jpg" class="rounded-2" style="width: 2rem;"
                         alt="Premier League">
