--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="bg-black text-white">
-  <div class="col-lg-6 mx-auto pb-5" id="mainPage">
+  <div class="col-lg-6 mx-auto pb-5">
     <nav class="navbar navbar-expand flex-column py-2 px-3 border border-2 border-bottom-1 border-start-0 border-top-0 border-end-0 border-white">
       <ul class="navbar-nav w-100 d-flex justify-content-between align-items-center">
         <li class="nav-item">
@@ -36,23 +36,24 @@
           <div class="modal-header p-3 d-flex align-items-center border border-2 border-bottom-1 border-start-0 border-top-0 border-end-0 border-white">
             <i data-bs-dismiss="modal" class="bi bi-arrow-left cursor-pointer fw-bold font-md"></i>
             <form class="d-flex gap-2">
-              <input type="text" placeholder="Enter league" class="form-control font-xs">
-              <button type="submit" class="btn btn-info font-xs">search</button>
+              <input type="text" placeholder="Enter league" class="px-2 rounded-3 font-sm">
+              <button class="bg-info rounded-3 px-2 py-1 font-sm">search</button>
             </form>
           </div>
           <div class="modal-body d-grid gap-3 p-3" id="modalContent"></div>
         </div>
       </div>
     </div>
+
+    <div id="mainPage"></div>
+    <div class="fixed-bottom mx-auto col-lg-6 z-0">
+      <button class="btn btn-block text-bg-dark w-100 rounded-0 fw-bold font-md" data-bs-toggle="popover" type="button" title="Clarification" data-bs-trigger="focus" data-bs-placement="top" data-bs-content="This is a football app which shows highlight of played match">
+        information
+      </button>
+    </div>
   </div>
 
   <main id="leagueDivMain"></main>
-  
-  <div class="fixed-bottom mx-auto col-lg-6 z-0">
-    <button class="btn btn-block text-bg-dark w-100 rounded-0 fw-bold font-md" data-bs-toggle="popover" type="button" title="Clarification" data-bs-trigger="focus" data-bs-placement="top" data-bs-content="This is a football app which shows highlight of played match">
-      information
-    </button>
-  </div>
   <script src="index.js"></script>
 </body>
 </html>
