removed the input border

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           <div class="modal-header p-3 d-flex align-items-center border border-2 border-bottom-1 border-start-0 border-top-0 border-end-0 border-white">
             <i data-bs-dismiss="modal" class="bi bi-arrow-left cursor-pointer fw-bold font-md"></i>
             <form class="d-flex gap-2">
-              <input type="text" placeholder="Enter league" class="px-2 rounded-3 font-sm">
-              <button class="bg-info rounded-3 px-2 py-1 font-sm">search</button>
+              <input type="text" placeholder="Enter league" class="px-2 border-0 rounded-2 font-sm">
+              <button class="bg-info border-0 rounded-2 px-2 py-1 font-sm">search</button>
             </form>
           </div>
           <div class="modal-body d-grid gap-3 p-3" id="modalContent"></div>
